--- a/src/main/resources/org/jenkinsci/plugins/displayurlapi/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/displayurlapi/Messages.properties
@@ -1,2 +1,3 @@
 display.url = Notification URL
+display.description=Select your preferred user interface when clicking links to Jenkins from notifications (e.g. Slack, GitHub, or Email).
 classic.name = Jenkins Classic
